# py_forecasting

./: README.md  pyproject.toml
main/: main.py
main/common/: consts.py
main/routes/: forecasting_api.py
src/: main.py
src/common/: utils.py
src/routes/: forecasting_api.py
src/templates/forecasting/: car-sales.html
tests/: test_prophet.py
